# project

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  entrypoint.sh
.devcontainer/: devcontainer.json
.github/workflows/: bazel.yml  cpp.yml  cv.yaml  helloAction.yml  python.yaml
cpp/: .gitignore  BUILD  Makefile  data_types.cpp  main.cpp  tree.cpp  uniform_initialization.cpp
cpp/cpp_build/: CMakeLists.txt
cpp/include/: datatypes.h  uniform_initialization.h
cpp/src/: 04_pointers.cpp  RTTI.cpp  abstract_classes.cpp  class.cpp  class_access.cpp  class_cons_public.cpp  cons_cascading.cpp  constructor.cpp  copy_consructor.cpp  datatypes.cpp  downcasting.cpp  dynamic_2d_array.cpp  emp_inh.cpp  friend_function_operator.cpp  fsteam.cpp  inheritance.cpp  inline.cpp  method_overloading.cpp  namespaces.cpp  operator.cpp  order.cpp  pointer.cpp  pointer_1.cpp  pointer_task.cpp  references.cpp  smart_pointer.cpp  string_capitalize.cpp  template.cpp  type_conversions.cpp  uniform_initialization.cpp  vector_class_pointers_task.cpp  virtual_pointer.cpp
python/: 01_stack.py  doc.py  get_libraries.py  pandas_df.py  requirements.txt  test_regex.py
python/basics/: data_structures.py  kwargs.py
python/cv/: convolutions.py  grayscale.py  image_manipulations.py  line_detection.py  region_of_interest.py
python/decorators/: 01_decorator.py
python/generators/: 02_fibonacci.py
python/generators/decorators/: 01_decorator.py
python/lyric/: lyric.py  try.py
python/problem_statements/: sample.txt
python/regex/: test_regex.py
